Customer update ability added

--- a/projects/raccounting/app/views/customers/index.html.erb
+++ b/projects/raccounting/app/views/customers/index.html.erb
@@ -12,6 +12,7 @@
 <td><%= customer.company_title %></td>
 <td><%= customer.short_name %></td>
 <td><%= link_to 'Show', customer_path(customer) %></td>
+<td><%= link_to 'Edit', edit_customer_path(customer) %></td>
 </tr>
 <% end %>
 </table>
