Typo fixed in the Product _form partial view

--- a/projects/raccounting/app/views/products/_form.html.erb
+++ b/projects/raccounting/app/views/products/_form.html.erb
@@ -14,7 +14,7 @@
     <%= f.label :do_stock_tracking_1, "Yes" %><br>
     <%= f.radio_button :do_stock_tracking, "1" %><br>
 
-    <%= f.label :do_stock_tracking_0, "Real Person" %><br>
+    <%= f.label :do_stock_tracking_0, "No" %><br>
     <%= f.radio_button :do_stock_tracking, "0" %><br>
 </div>
 <div> 
