Product listing moved a partial view

--- a/projects/raccounting/app/views/products/index.html.erb
+++ b/projects/raccounting/app/views/products/index.html.erb
@@ -1,23 +1,20 @@
 <h1>Products</h1>
-<div> <%= link_to 'New Product / Service', new_product_path %> </div>
+<div> <%= link_to 'New Product / Service', new_company_product_path %> </div>
 
 <table>
-    <tr>
-        <th>Name</th>
-        <th>Stock Count</th>
-        <th>Buying Price (tax excl.)</th>
-        <th>List Price (tax excl.)</th>
-    </tr>
-
-<% @products.each do |product| %>
-    <tr>
-        <td><%= product.name %></td>
-        <td><%= product.amount %></td>
-        <td><%= product.purchase_price %></td>
-        <td><%= product.sales_price %></td>
-        <td><%= link_to 'Show', productpath(product) %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-    </tr>
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Stock Count</th>
+            <th>Buying Price (tax excl.)</th>
+            <th>List Price (tax excl.)</th>
+        </tr>
+    </thead>
+    <tbody>
+<% if @products.each do |product| %>
+    <%= render partial: 'product', :object => product %>
+<% end.empty? %>
+    <span> No product </span>
 <% end %>
-
+</tbody>
 </table>
