Application layout design improved

--- a/projects/raccounting/app/views/layouts/application.html.erb
+++ b/projects/raccounting/app/views/layouts/application.html.erb
@@ -6,28 +6,72 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+      <%= stylesheet_link_tag 'bootstrap' %>
+      <%= stylesheet_link_tag 'custom.min' %>
+      <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+      <!--[if lt IE 9]>
+        <%= javascript_include_tag 'html5shiv' %>
+        <%= javascript_include_tag 'respond.min' %>
+      <![endif]-->
+     
   </head>
 
-  <body>
-    <p class="navbar-text pull-right">
-    <% if user_signed_in? %>
-      <strong><%= current_user.name  %></strong>
-      <strong><%= current_user.company.name %></strong>
-      <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-    <% else %>
-      <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-      <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-    <% end %>
-    <% if notice %>
-      <p class="alert alert-success"><%= notice %></p>
-    <% end %>
-    <% if alert %>
-      <p class="alert alert-danger"><%= alert %></p>
-    <% end %>
+<body>
+	<div class="container navbar-fixed-top"> 
+		<div class="row">
+			<div class="col-lg-8 col-md-7 col-sm-6">
+				<h1>Raccounting</h1>
+			</div>
+		  <div class="col-lg-4 col-md-5 col-sm-6">			 
+			  <% if user_signed_in? %>
+			  <strong><%= current_user.name  %></strong>
+			  <strong><%= current_user.company.name %></strong>
+			  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+			  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+			  <% else %>
+			  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+			  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+			  <% end %>			  
+		  </div>
+		</div>
+		<div class="row">
+			<div class="col-lg-3" style="background: #373636">
+				<ul class="nav nav-pills nav-stacked left-menu" id="stacked-menu">
+					<li>
+						<a href="javascript:void(0);" data-target="#item1" data-toggle="collapse" data-parent="#stacked-menu">
+						SATIŞLAR<span class="caret arrow"></span>
+						</a>
 
+						<ul class="nav nav-stacked collapse left-submenu" id="item1">
+							<li><%= link_to "Müşteriler", company_customers_path(@company) %></li>
+						</ul>
+					</li>
+					<li>
+						<a href="javascript:void(0);" data-target="#item2" data-toggle="collapse" data-parent="#stacked-menu">STOK<span class="caret arrow"></span></a>          
+						<ul class="nav nav-pills nav-stacked collapse" id="item2">
+							<li><%= link_to "Hizmet ve Ürünler", company_products_path(@company) %></li>
+							<li><%= link_to "Stok Hareketleri", company_stockmovements_path(@company) %></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+			<div class="col-lg-9" style="position: relative; background: #FDFDFD; box-shadow: 0 0 8px #d7d5d4">
 
-    <%= yield %>
+        <div class="container">
+          <% if notice %>
+            <p class="alert alert-success"><%= notice %></p>
+          <% end %>
+          <% if alert %>
+            <p class="alert alert-danger"><%= alert %></p>
+          <% end %>
+        </div>
 
+			  <%= yield %>
+			</div>
+		</div>
+	</div>
+  <%= javascript_include_tag 'jquery-1.10.2.min' %>
+  <%= javascript_include_tag 'bootstrap.min' %>
   </body>
 </html>
