Customer route helper methods fixed

--- a/projects/raccounting/app/views/customers/show.html.erb
+++ b/projects/raccounting/app/views/customers/show.html.erb
@@ -9,4 +9,4 @@
 <p>
 
 
-<td><%= link_to 'Edit', edit_customer_path(@customer) %></td>
+<td><%= link_to 'Edit', edit_company_customer_path(@company, @customer) %></td>
