--- a/projects/raccounting/app/views/customers/edit.html.erb
+++ b/projects/raccounting/app/views/customers/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :customer, url: customer_path(@customer), method: :patch do |f| %>
+<%= form_for :customer, url: company_customer_path(@company, @customer), method: :patch do |f| %>
 
 <%if @customer.errors.any? %>
     <div>
