--- a/projects/raccounting/app/views/customers/index.html.erb
+++ b/projects/raccounting/app/views/customers/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Customer#index</h1>
-<div> <%= link_to 'New Customer', new_customer_path %> </div>
+<div> <%= link_to 'New Customer', new_company_customer_path(@company) %> </div>
 <table>
 
 <tr>
@@ -11,8 +11,8 @@
     <tr>
 <td><%= customer.company_title %></td>
 <td><%= customer.short_name %></td>
-<td><%= link_to 'Show', customer_path(customer) %></td>
-<td><%= link_to 'Edit', edit_customer_path(customer) %></td>
+<td><%= link_to 'Show', company_customer_path(@company, customer) %></td>
+<td><%= link_to 'Edit', edit_company_customer_path(@company, customer) %></td>
 </tr>
 <% end %>
 </table>
