--- a/projects/raccounting/app/views/customers/new.html.erb
+++ b/projects/raccounting/app/views/customers/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :customer, url: customers_path do |f| %>
+<%= form_for :customer, url: company_customers_path do |f| %>
 
 <%if @customer.errors.any? %>
     <div>
