--- a/projects/raccounting/app/views/layouts/application.html.erb
+++ b/projects/raccounting/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
 		<div class="row">
 			<div class="col-lg-3" style="background: #373636">
 				<ul class="nav nav-pills nav-stacked left-menu" id="stacked-menu">
+				<li><%= link_to "GÜNCEL DURUM", company_path(@company) %></li>
 					<li>
 						<a href="javascript:void(0);" data-target="#item1" data-toggle="collapse" data-parent="#stacked-menu">
 						SATIŞLAR<span class="caret arrow"></span>
@@ -51,7 +52,7 @@
 						<a href="javascript:void(0);" data-target="#item2" data-toggle="collapse" data-parent="#stacked-menu">STOK<span class="caret arrow"></span></a>          
 						<ul class="nav nav-pills nav-stacked collapse" id="item2">
 							<li><%= link_to "Hizmet ve Ürünler", company_products_path(@company) %></li>
-							<li><%= link_to "Stok Hareketleri", company_stockmovements_path(@company) %></li>
+							<li><%= link_to "Stok Hareketleri", company_stock_movements_path(@company) %></li>
 						</ul>
 					</li>
 				</ul>
