--- a/projects/raccounting/app/views/layouts/application.html.erb
+++ b/projects/raccounting/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 				<h1>Raccounting</h1>
 			</div>
 		  <div class="col-lg-4 col-md-5 col-sm-6">
-					<strong><%= current_user.name  %></strong>
+					<strong><%= current_user.name + " " + current_user.surname  %></strong>
 					<strong><%= current_user.company.name %></strong>
 					<%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
 					<%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
