--- a/projects/raccounting/app/views/layouts/application.html.erb
+++ b/projects/raccounting/app/views/layouts/application.html.erb
@@ -16,19 +16,19 @@
 		<![endif]-->
   </head>
 <body>
-<% if user_signed_in? %>
-	<div class="container navbar-fixed-top"> 
+<% if user_signed_in? %> 
 		<div class="row">
 			<div class="col-lg-8 col-md-7 col-sm-6">
 				<h1>Raccounting</h1>
 			</div>
-		  <div class="col-lg-4 col-md-5 col-sm-6">
+			<div class="col-lg-3 col-md-5 col-sm-6 col-lg-offset-1">					
 					<strong><%= current_user.name + " " + current_user.surname  %></strong>
 					<strong><%= current_user.company.name %></strong>
 					<%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-					<%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-		  </div>
+					<%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>					
+			</div>
 		</div>
+ 
 		<div class="row">
 			<div class="col-lg-3" style="background: #373636">
 				<ul class="nav nav-pills nav-stacked left-menu" id="stacked-menu">
@@ -51,7 +51,7 @@
 					</li>
 				</ul>
 			</div>
-			<div class="col-lg-9" style="position: relative; background: #FDFDFD; box-shadow: 0 0 8px #d7d5d4">
+			<div class="col-lg-9" style="background: #FDFDFD; box-shadow: 0 0 8px #d7d5d4">
 
         <div class="container">
           <% if notice %>
@@ -65,7 +65,6 @@
 			  <%= yield %>
 			</div>
 		</div>
-	</div>
   <%= javascript_include_tag 'jquery-1.10.2.min' %>
   <%= javascript_include_tag 'bootstrap.min' %>
 <% end %>
