Customer edit view uses partial form view

--- a/projects/raccounting/app/views/customers/edit.html.erb
+++ b/projects/raccounting/app/views/customers/edit.html.erb
@@ -1,70 +1,1 @@
-<%= form_for :customer, url: company_customer_path(@company, @customer), method: :patch do |f| %>
-
-<%if @customer.errors.any? %>
-    <div>
-        <%= pluralize(@customer.errors.count, "error") %> detected:
-        <ul>
-            <% @customer.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-            <%end%>
-        </ul>
-    </div>
-<% end %>
-
-<div>
-    <%= f.label :company_title %><br>
-    <%= f.text_field :company_title %><br>
-</div>
-
-<div>
-    <%= f.label :short_name %><br>
-    <%= f.text_field :short_name %><br>
-</div>
-<div>
-    <%= f.label :email %><br>
-    <%= f.text_field :email %><br>
-</div>
-
-<div>
-    <%= f.label :phone_number %><br>
-    <%= f.text_field :phone_number %><br>
-</div>
-
-<div>
-    <%= f.label :fax_number %><br>
-    <%= f.text_field :fax_number %><br>
-</div>
-
-<div>
-    <%= f.label :iban %><br>
-    <%= f.text_field :iban %><br>
-</div>
-
-<div>
-    <%= f.label :address %><br>
-    <%= f.text_field :address %><br>
-</div>
-
-<div>
-    <%= f.label :customer_type %><br>
-    <%= f.label :customer_type_legal_entity, "Legal Entity" %><br>
-    <%= f.radio_button :customer_type, "legal_entity" %><br>
-    
-    <%= f.label :customer_type_real_person, "Real Person" %><br>
-    <%= f.radio_button :customer_type, "real_person" %><br>
-</div>
-
-<div>
-    <%= f.label :nid %><br>
-    <%= f.text_field :nid %><br>
-</div>
-
-<div>
-    <%= f.label :tax_office %><br>
-    <%= f.text_field :tax_office %><br>
-</div>
-
-<div>
-<%= f.submit %>
-</div>
-<% end %>
+<%= render 'form' %>
