--- a/projects/raccounting/app/views/customers/show.html.erb
+++ b/projects/raccounting/app/views/customers/show.html.erb
@@ -1,12 +1,23 @@
-<p>
-<strong> Company Title </strong>
-<%= @customer.company_title %>
-<p>
-
-<p>
-<strong> Short Name </strong>
-<%= @customer.short_name %>
-<p>
+<div class="row">
+	<div class="col-lg-12">
+		<h3>Müşteri</h3>
+	</div>
+</div>
 
 
-<td><%= link_to 'Edit', edit_company_customer_path(@company, @customer) %></td>
+<div class="row">
+	<div class="row">
+		<div class="col-lg-7">
+			<h4><%= @customer.short_name %> (<%= @customer.company_title %>)</h4>
+		</div>
+		<div class="col-lg-offset-5">
+			<%= link_to "DÜZENLE", edit_company_customer_path(@company, @customer), :class => "btn btn-default" %>
+		</div>
+	</div>
+<hr />
+
+	<div class="row">
+		<div class="col-lg-6">  <%= @customer.email %> </div>
+		<div class="col-lg-6">  <%= @customer.phone_number %> </div>
+	</div>
+</div>
