--- a/projects/raccounting/app/views/products/_form.html.erb
+++ b/projects/raccounting/app/views/products/_form.html.erb
@@ -1,51 +1,73 @@
-<%= form_for ([@company, @product]) do |f| %>
-
-<div>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+<%= form_for [@company, @product], :html => {:class => "form-horizontal"} do |f| %>
+	<fieldset>
+    <legend>Hizmet ve Ürünler - Yeni</legend>
+<div class="form-group">
+    <%= f.label :name , :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+    <%= f.text_field :name, :class => "form-control" %>
+</div>
 </div>
 
-<div>
-    <%= f.label :code %>
-    <%= f.text_field :code %>
+<div class="form-group">
+    <%= f.label :code, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+    <%= f.text_field :code, :class => "form-control" %>
 </div>
-<div>
-    <%= f.label :do_stock_tracking %><br>
-    <%= f.label :do_stock_tracking_true, "Yes" %><br>
-    <%= f.radio_button :do_stock_tracking, "true" %><br>
-
-    <%= f.label :do_stock_tracking_false, "No" %><br>
-    <%= f.radio_button :do_stock_tracking, "false" %><br>
 </div>
 
-<div>
-    <%= f.label :amount %>
-    <%= f.text_field :amount %>
+<div class="form-group">
+    <%= f.label :do_stock_tracking, :class => "col-lg-2 control-label" %>
+    	<div class="col-lg-10">
+
+    <%= f.label :do_stock_tracking_true, "Yes" %>
+    <%= f.radio_button :do_stock_tracking, "true" %>
+
+    <%= f.label :do_stock_tracking_false, "No" %>
+    <%= f.radio_button :do_stock_tracking, "false" %>
+</div>
 </div>
 
-<div>
-    <%= f.label :purchase_sales_unit %>
-    <%= f.text_field :purchase_sales_unit %>
+<div class="form-group">
+    <%= f.label :amount, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+    <%= f.text_field :amount, :class => "form-control" %>
+</div>
 </div>
 
-<div>
-    <%= f.label :purchase_price %>
-    <%= f.text_field :purchase_price %>
+<div class="form-group">
+    <%= f.label :purchase_sales_unit, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+    <%= f.text_field :purchase_sales_unit, :class => "form-control" %>
+</div>
 </div>
 
-<div>
-    <%= f.label :sales_price %>
-    <%= f.text_field :sales_price %>
+<div class="form-group">
+    <%= f.label :purchase_price, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+    <%= f.text_field :purchase_price, :class => "form-control" %>
+</div>
 </div>
 
-<div>
-    <%= f.label :vat %>
-    <%= f.text_field :vat %>
+<div class="form-group">
+    <%= f.label :sales_price, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+    <%= f.text_field :sales_price, :class => "form-control" %>
+</div>
 </div>
 
-<div> 
-    <%= f.submit %>
+<div class="form-group">
+    <%= f.label :vat, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+    <%= f.text_field :vat, :class => "form-control" %>
 </div>
+</div>
+
+	<div class="form-group">
+			<div class="col-lg-10 col-lg-offset-2"> 
+				<%= link_to "VAZGEÇ", company_products_path(@company), :class => "btn btn-default" %>
+				<%= f.submit "KAYDET", :class => "btn btn-primary" %>
+			</div>
+		</div></fieldset>
 <% end %>
 
 
