--- a/projects/raccounting/app/views/products/index.html.erb
+++ b/projects/raccounting/app/views/products/index.html.erb
@@ -1,20 +1,20 @@
 <h1>Products</h1>
-<div> <%= link_to 'New Product / Service', new_company_product_path %> </div>
+<div> <%= link_to 'HİZMET / ÜRÜN EKLE', new_company_product_path(@company), :class => "btn btn-default" %> </div>
 
-<table>
+<table class="table table-striped table-hover">
     <thead>
         <tr>
-            <th>Name</th>
-            <th>Stock Count</th>
-            <th>Buying Price (tax excl.)</th>
-            <th>List Price (tax excl.)</th>
+            <th>ADI</th>
+            <th>STOK MİKTARI</th>
+            <th>ALIŞ FİYATI (VERGİLER HARİÇ)</th>
+            <th>SATIŞ FİYATI (VERGİLER HARİÇ)</th>
         </tr>
     </thead>
     <tbody>
-<% if @products.each do |product| %>
-    <%= render partial: 'product', :object => product %>
-<% end.empty? %>
-    <span> No product </span>
-<% end %>
-</tbody>
+		<% if @products.each do |product| %>
+			<%= render partial: 'product', :object => product %>
+		<% end.empty? %>
+			<span> KAYITLI HİZMET / ÜRÜN YOK </span>
+		<% end %>
+	</tbody>
 </table>
